@@ -20,7 +20,7 @@ if [ "$CPU_COUNT" -eq 0 ]
 then
   if command -v nproc >/dev/null 2>&1
   then
-    CPU_COUNT="$(nproc 2>/dev/null)" || CPU_COUNT="0" 
+    CPU_COUNT="$(nproc 2>/dev/null)" || CPU_COUNT="0"
   fi
 fi
 
