@@ -140,7 +140,7 @@ endif
 .cpp.o:
 	$(CXX) -c $(CCXFLAGS) $(INCLUDES) -fpic -o $@ $<
 
-all: dep $(OBJS) 
+all: dep $(OBJS)
 	$(CXX) $(CCXFLAGS) $(INCLUDES) $(LDFLAGS) -shared -Wl,-soname,$(LIB).$(MAJOR) -o $(LIB).$(VERSION) $(OBJS)
 	ln -s -f $(LIB).$(VERSION) libfinal.so.$(MAJOR)
 	ln -s -f $(LIB).$(MAJOR) libfinal.so
